test/fixtures/public/fail/syntactical/CompleteWhileTest.jmm
class Worker extends Person {
    int idade;
    boolean is_working123;
    int[] favorite_$_Numbers;
    Identification id;

    public static void main(String[] args) {
        int x;

        while(a+;) {
            valid_code;
        }

        while(2+2 < 8) {
            x = x + 1;
        }

        while(bro+;ken/;) {
            x = x - 1;
        }

        while((err+;o)) {
            a = 2+2;
            while(outroerr;o) {
                while(ola+) {
                    c = c+1;
                }
            }
            c = c+3;
        }

        while((if)) {
            1;
        }

        while(((((((2))))))) 3;

        while(((((((((((123 */ 2;))))))))))) 1;

        while(1231312 + &&;) {
            while(a+;) 1;
        }

        while((while)) {
            1;
        }

        while(else;) 1;
    }
}